<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/action_products" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_check_connection"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_check_connection" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/action_about" />
    </group>


</menu>
