<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_settings">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:gravity="right"
            android:text="@string/pref_server"
            />

        <EditText
            android:id="@+id/pref_server"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_weight="0.7"
            android:textColor="@color/editext_colors"
            android:textSize="@dimen/elementTextValueSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:gravity="right"
            android:text="@string/pref_username"
            />

        <EditText
            android:id="@+id/pref_username"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_weight="0.7"
            android:textColor="@color/editext_colors"
            android:textSize="@dimen/elementTextValueSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="@dimen/form_horizontal_padding"
        android:paddingRight="@dimen/form_horizontal_padding">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:gravity="right"
            android:text="@string/pref_password"
            />

        <EditText
            android:id="@+id/pref_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_horizontal_margin"
            android:layout_weight="0.7"
            android:inputType="textPassword"
            android:textColor="@color/editext_colors"
            android:textSize="@dimen/elementTextValueSize" />

    </LinearLayout>


<!--

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5">
        <Button
            android:id="@+id/settings_ok_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="ΟΚ"
            android:textSize="17sp" />

        <Button
            android:id="@+id/settings_cancel_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:text="ΑΚΥΡΟ"
            android:textSize="17sp" />
    </LinearLayout>
-->
</LinearLayout>